取消多选框选项

--- a/things-selector-content-by-menu.html
+++ b/things-selector-content-by-menu.html
@@ -209,6 +209,20 @@ Copyright © HatioLab Inc. All rights reserved.
 				 */
 				ownerType: {
 					type: String
+				},
+
+				/**
+				 * 取消多选框选项
+				 * ******
+				 * @type {Object}
+				 */
+				gridConfig: {
+					type: Object,
+					value: {
+						options: {
+							checkBar: false
+						}
+					}
 				}
 			},
 
