--- a/things-selector-content-by-entity.html
+++ b/things-selector-content-by-entity.html
@@ -219,6 +219,20 @@ Copyright © HatioLab Inc. All rights reserved.
 				 */
 				valueField: {
 					type: String
+				},
+
+				/**
+				 * 取消多选框选项
+				 * ******
+				 * @type {Object}
+				 */
+				gridConfig: {
+					type: Object,
+					value: {
+						options: {
+							checkBar: false
+						}
+					}
 				}
 			},
 
